# django-drf-pytest-example

./: .coveragerc  README.md  manage.py  pyproject.toml  pytest.ini
blog/: apps.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_add_sample_data.py
blog/tests/: test_blog_detail.py  test_blog_list.py
drfwithpytest/: asgi.py  settings.py  test_runner.py  urls.py  wsgi.py
